--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
