--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "faded-text": "^0.0.13",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
